feat: add managed SDE updater